# raykit

./: .editorconfig  .gitignore  .npmrc  AGENTS.md  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.codex/rules/: code-quality.md  testing.md  typescript.md
.codex/skills/package-creator/scripts/: create-package.ts
.codex/skills/raykit-solid-lumino-bridge/: SKILL.md
.codex/skills/raykit-solid-lumino-bridge/references/: communication-patterns.md  registration-patterns.md  rendering-patterns.md  repo-map.md
.opencode/command/: opsx-apply.md
.opencode/plugins/: superpowers.js
.opencode/skills/brainstorming/: SKILL.md
.opencode/skills/package-creator/: SKILL.md
.opencode/skills/package-creator/scripts/: create-package.ts
.opencode/skills/using-superpowers/: SKILL.md
apps/cli/: package.json  rollup.config.ts  tsconfig.json
apps/cli/src/: cli.ts  config.ts  electron.ts  index.ts  utils.ts
apps/cli/src/command/: build.ts  preview.ts  server.ts
apps/cli/src/plugins/: auto-container-modules.ts  electron.ts
apps/desktop/: README.md  electron-builder.yml  electron.vite.config.ts  env.d.ts  forge.config.ts  next.config.ts  package.json  postcss.config.js  raykit.config.ts  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.services.config.ts
apps/desktop/build-configs/: vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
apps/desktop/project.inlang/: project_id  settings.json
apps/desktop/resources/icons/: icon.icns
apps/desktop/src/: app.css  hooks.server.ts  main.ts
apps/desktop/src/app/: globals.css  layout.tsx  page.tsx
apps/desktop/src/app/components/: Footer.tsx  actions-panel.tsx  actions.tsx  command-footer.tsx  command-panel.tsx  custom-command.tsx  custom-footer.tsx
apps/desktop/src/app/extension/: page.tsx
apps/desktop/src/app/onboarding/: page.tsx
apps/desktop/src/browser/: index.css  index.html  main.ts
apps/desktop/src/components/ui/: command.tsx  dialog.tsx  dropdown-menu.tsx  hotkeys.tsx  popover.tsx
apps/desktop/src/electron/: main.ts  preload.ts
apps/desktop/src/electron-browser/routes/app/: +layout.svelte  +page.svelte
apps/desktop/src/electron-main/: main.ts
apps/desktop/src/electron/common/: tray.ts  window.ts
apps/desktop/src/lib/components/command/: CustomFooter.svelte  CustomGroup.svelte  CustomHeading.svelte  index.ts
apps/desktop/src/lib/components/layout/: ActionsBar.svelte  (+3 more)
apps/desktop/src/lib/stores/: appState.ts
apps/desktop/src/main/: index.ts  window.ts
apps/desktop/src/mian/: app.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/routes/: +error.svelte  +page.svelte
apps/desktop/src/routes/: +error.svelte  +layout.svelte
apps/desktop/src/routes/app/: +layout.svelte  +page.svelte
apps/desktop/src/routes/onboarding/: +page.svelte
apps/docs/: package.json
apps/website/: package.json
crates/extension/: Cargo.toml  extension.excalidraw
crates/extension-host/: Cargo.toml
crates/extension-host/src/: extension_host.rs  js_host.rs
crates/extension-manifest/: Cargo.toml
crates/extension-manifest-gen/: Cargo.toml
crates/extension-manifest/src/: extension_manifest.rs
crates/extension-manifest/tests/: mod.rs
crates/extension-schema/: Cargo.toml  README.md  build.rs
crates/extension-schema/schema/: extension.schema.json
crates/extension/src/: extension.rs  extension_host_proxy.rs  extension_manifest.rs  extension_store.rs  lib.rs
crates/fs/: Cargo.toml
crates/fs/src/: fs.rs
crates/js-runtime/: Cargo.toml  README.md
crates/js-runtime/src/: js_runtime.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs  manifest.rs
crates/match/: Cargo.toml  README.md
crates/match/examples/: basic.rs
crates/match/src/: lib.rs
crates/match/tests/: mod.rs
crates/paths/: Cargo.toml
crates/paths/src/: paths.rs
crates/preferences/: Cargo.toml
crates/raykit/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
crates/raykit-extension/: Cargo.toml  README.md
crates/raykit-extension/src/: scanner.rs
crates/raykit-manifest/: Cargo.toml  README.md
crates/raykit-manifest/src/: lib.rs
crates/raykit-manifest/src/contribute/: keybinding.rs  mod.rs
crates/raykit-manifest/tests/: mod.rs
crates/raykit-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/raykit-tauri/src/: lib.rs  main.rs
crates/raykit-tauri/src/core/: mod.rs  window.rs
crates/raykit-tauri/src/system/: mod.rs  tray.rs
crates/raykit/capabilities/: default.json
crates/raykit/src/: commands.rs  main.rs  raykit.rs  tray.rs  window.rs
crates/raykit/src/core/: commands.rs
crates/raykit/src/system/: tray.rs
crates/schema/: Cargo.toml
crates/schema-generator/: Cargo.toml  build.rs
crates/schema/src/: contributes.rs  lib.rs  manifest.rs
crates/schema/src/contribute/: command.rs  configuration.rs  keybinding.rs  mod.rs  palette.rs  view.rs  view_container.rs
crates/settings/: Cargo.toml
crates/tauri/: Cargo.toml  tauri.conf.json
crates/tauri/icons/: icon.icns
crates/tauri/src/: lib.rs  main.rs
crates/tauri/src/core/: window.rs
crates/tauri/src/system/: tray.rs
crates/theme/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: fs.rs
docs/: auto-container-modules-config-design.md
extensions/configuration/: package.json
extensions/developer/: package.json
extensions/developer/src/: developer.html  devtools.tsx
extensions/devtools/: package.json
extensions/marketplace/: package.json
extensions/preferences/: package.json
extensions/settings/: package.json
extensions/store/: package.json
openspec/changes/archive/2026-02-02-design-command-system/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-09-sandbox-preload/: design.md  proposal.md  tasks.md
openspec/specs/command-browser/: spec.md
openspec/specs/command-core/: spec.md
(+47 files in other folders)
