[workspace]
members = [
  "crates/extension",
  "crates/extension-host",
  "crates/extension-manifest",
  "crates/extension-schema",
  "crates/preferences",
  "crates/raykit"
]
resolver = "2"

[workspace.package]
authors = [ "raykit-apps" ]
homepage = "https://github.com/raykit-apps/raykit"
repository = "https://github.com/raykit-apps/raykit"
license = "MIT"
edition = "2021"

[workspace.dependencies]

#
# Workspace member crates
#

extension-manifest = { path = "crates/extension-manifest" }

#
# External crates
#

tokio = { version = "1.47.1", default-features = false }
serde = { version = "1", features = [ "derive" ] }
anyhow = "1.0.98"
serde_json = "1"
semver = { version = "1", features = [ "serde" ] }
schemars = { version = "1.0.3", features = [
  "url2",
  "semver1"
] }
url = { version = "2", features = [ "serde" ] }
