[workspace]
members = [
  "crates/extension",
  "crates/raykit",
  "crates/schema"
]
resolver = "2"

[workspace.package]
authors = [ "raykit-apps" ]
publish = false
homepage = "https://github.com/raykit-apps/raykit"
repository = "https://github.com/raykit-apps/raykit"
license = "MIT"
edition = "2024"

[workspace.dependencies]

#
# Workspace member crates
#

extension = { path = "crates/extension" }

#
# External crates
#

anyhow = "1"
dirs = "6.0"
futures = "0.3"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
semver = { version = "1", features = [ "serde" ] }
schemars = { version = "1", features = [
  "url2",
  "semver1"
] }
tauri = { version = "2.8" }
url = { version = "2.5", features = [ "serde" ] }
tokio = { version = "1.47.0", default-features = false }
