[package]
name = "extension-host"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/extension_host.rs"

[[test]]
name = "extension-host"
path = "tests/mod.rs"

[dependencies]
