[package]
name = "extension-manifest"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/extension_manifest.rs"

[[test]]
name = "extension-manifest"
path = "tests/mod.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
semver = { version = "1", features = [ "serde" ] }
schemars = { version = "1.0.3", features = [
  "url2",
  "semver1"
] }
url = { version = "2", features = [ "serde" ] }
