[package]
name = "extension-manifest"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/extension_manifest.rs"

[[test]]
name = "extension-manifest"
path = "tests/mod.rs"

[dependencies]
anyhow.workspace = true
fs.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
schemars.workspace = true
url.workspace = true
