[package]
name = "extension-schema"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[build-dependencies]
extension-manifest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
schemars = { workspace = true }
url = { workspace = true }
