[package]
name = "extension"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/extension.rs"

[[test]]
name = "extension"
path = "tests/mod.rs"

[dependencies]
extension-manifest.workspace = true
