[package]
name = "fs"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/fs.rs"

[[test]]
name = "fs"
path = "tests/mod.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
paths.workspace = true
libc.workspace = true
serde.workspace = true
tokio = { workspace = true, features = [
  'fs',
  'rt'
] }

[target.'cfg(target_os = "windows")'.dependencies]
file-id.workspace = true
