[package]
name = "js-runtime"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/js_runtime.rs"

[[test]]
name = "js_runtime"
path = "tests/mod.rs"

[dependencies]
