[package]
name = "manifest"
version = "0.1.0"
publish.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/manifest.rs"

[dependencies]
anyhow.workspace = true
fs.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
schemars.workspace = true
url.workspace = true
