[package]
name = "raykit-match"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex = "1.10"
thiserror = "1.0"

[[test]]
name = "match"
path = "tests/mod.rs"
