[package]
name = "paths"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/paths.rs"

[[test]]
name = "paths"
path = "tests/mod.rs"

[dependencies]
dirs.workspace = true
