[package]
name = "raykit-tauri"
version = "0.0.0"
edition = "2021"
authors = [ "Raykit" ]
publish = false

[lib]
doctest = false
crate-type = [
  "lib",
  "staticlib",
  "cdylib"
]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }
flate2 = "1.1.2"
tar = "0.4.44"
zip = "4.2.0"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "parking_lot"
] }
tauri = { version = "2.6.1", features = [
  "macos-private-api",
  "image-png",
  "image-ico",
  "tray-icon",
  "devtools",
] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-shell = "2.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
