[package]
name = "raykit"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "raykit"
path = "src/raykit.rs"
doctest = false
crate-type = [
  "lib",
  "staticlib",
  "cdylib"
]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }
flate2 = "1.1.2"
tar = "0.4.44"
zip = "4.2.0"

[dependencies]
anyhow.workspace = true
dirs.workspace = true
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "parking_lot"
] }
tauri = { workspace = true, features = [
  "macos-private-api",
  "image-png",
  "image-ico",
  "tray-icon",
  "devtools",
] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-log = "2.6.0"
serde.workspace = true
serde_json.workspace = true
log = "^0.4"
tracing.workspace = true
tracing-subscriber.workspace = true
