[package]
name = "raykit"
version = "0.0.1"
publish.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "raykit-main"
path = "src/main.rs"

[lib]
name = "raykit"
path = "src/raykit.rs"
doctest = false
crate-type = [
  "lib",
  "staticlib",
  "cdylib"
]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
anyhow.workspace = true
tauri = { workspace = true, features = [
  "macos-private-api",
  "image-png",
  "image-ico",
  "tray-icon",
  "devtools",
  "unstable"
] }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread"
] }
