[package]
name = "schema-generator"
version = "0.1.0"
publish.workspace = true
license.workspace = true
edition.workspace = true

[build-dependencies]
anyhow.workspace = true
extension.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
utils.workspace = true
