[package]
name = "raykit-schema"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
url = { version = "2", features = [ "serde" ] }
semver = { version = "1", features = [ "serde" ] }
schemars = { version = "1.0.3", features = [
  "url2",
  "semver1"
] }
