[package]
name = "raykit-tauri"
version = "0.0.0"
edition = "2021"
authors = [ "Raykit" ]
publish = false

[lib]
doctest = false
name = "raykit_lib"
crate-type = [
  "lib",
  "staticlib",
  "cdylib"
]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.1", features = [
  "macos-private-api",
  "image-png",
  "image-ico",
  "tray-icon",
  "devtools",
] }
tauri-plugin-opener = "2.4.0"
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-shell = "2.3.0"
