[package]
name = "utils"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/utils.rs"

[[test]]
name = "utils"
path = "tests/mod.rs"

[dependencies]
